# ATS_Resume_analyzer

./: README.md  SETUP_GUIDE.md  START.bat  pyproject.toml  quick_test.py  requirements.txt  test_analysis.py  test_parser.py
app/: config.py  llm.py  main.py  parser.py  pdf_parser.py  prompts.py  routes.py  scoring.py  services.py
ats-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
ats-frontend/src/: index.css
ats-frontend/src/api/: atsApi.js
ats-frontend/src/components/: AnalysisFormatter.jsx  InputSection.jsx  Loader.jsx  PdfUpload.jsx  ResultCard.jsx  ResultRenderer.jsx  Tabs.jsx
ats-frontend/src/pages/: Dashboard.jsx
